use ng-cloak to prevent content flicker

--- a/sass/imports/_main.scss
+++ b/sass/imports/_main.scss
@@ -136,10 +136,6 @@ h1 {
   background-color: #FFF;
 }
 
-.form_group_2 {
-  display: none;
-}
-
 .currency_list {
   vertical-align: top;
   display: inline-block;
